--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,13 @@
             android:scaleType="fitEnd"
             android:src="@drawable/download" />
 
+        <ImageView
+            android:id="@+id/ivOnline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitCenter"
+            android:src="@drawable/download" />
+
         <CheckBox
             android:id="@+id/cbFirstCourse"
             android:layout_width="match_parent"
