--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,12 +38,27 @@
             android:layout_height="wrap_content"
             android:onClick="moveToConditionActivity"
             android:text="Move to Conditions Activity" />
+
         <Button
             android:id="@+id/btnMoveToCalculatorActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="moveToCalculatorActivity"
             android:text="Move to Calculator Activity" />
+
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:textColor="#E11246"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/btnLogout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="logout"
+            android:text="Logout" />
 
         <Button
             android:id="@+id/btnGetResult"
