--- a/app/src/main/res/layout/demo_login_screen_with_linearlayout.xml
+++ b/app/src/main/res/layout/demo_login_screen_with_linearlayout.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_login_screen"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="30dp">
+    android:padding="30dp"
+    tools:context=".LoginActivity">
 
     <ImageView
         android:layout_width="100dp"
@@ -29,6 +31,7 @@
         android:textColor="@color/black" />
 
     <EditText
+        android:id="@+id/etEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
@@ -45,6 +48,7 @@
         android:textColor="@color/black" />
 
     <EditText
+        android:id="@+id/etPass"
         android:layout_width="match_parent"
         android:layout_marginTop="3dp"
         android:inputType="textPassword"
@@ -56,6 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="30dp"
         android:text="Login"
+        android:onClick="login"
         android:textAllCaps="false" />
 
     <LinearLayout
