30Nov22 2nd Class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,6 +70,12 @@
             android:layout_height="wrap_content"
             android:onClick="moveToLoopTaskActivity"
             android:text="Move to LoopTaskActivity" />
+        <Button
+            android:id="@+id/btnMoveToWebViewExampleActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="moveToWebViewExampleActivity"
+            android:text="Move to WebViewExampleActivity" />
 
         <TextView
             android:id="@+id/tvEmail"
