--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,30 +52,41 @@
             android:layout_height="wrap_content"
             android:onClick="moveToListViewExampleActivity"
             android:text="Move to ListView Example Activity" />
+
         <Button
             android:id="@+id/btnMoveToRecyclerViewExampleActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="recyclerViewExampleActivity"
             android:text="Move to RecyclerView Example Activity" />
+
         <Button
             android:id="@+id/btnMoveToGridViewActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="moveToGridViewActivity"
             android:text="Move to GridViewActivity" />
+
         <Button
             android:id="@+id/btnMoveToLoopTaskActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="moveToLoopTaskActivity"
             android:text="Move to LoopTaskActivity" />
+
         <Button
             android:id="@+id/btnMoveToWebViewExampleActivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="moveToWebViewExampleActivity"
             android:text="Move to WebViewExampleActivity" />
+
+        <Button
+            android:id="@+id/btnMoveToFragmentsContainerActivity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="moveToFragmentsContainerActivity"
+            android:text="Move to FragmentsContainerActivity" />
 
         <TextView
             android:id="@+id/tvEmail"
